# MXPBD

./: .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: Condition.h  Config.h  ConvexHull.h  DynamicAABBTree.h  Hook.h  PCH.h  PhysicsWorld.h  PhysicsWorldCommon.h  PhysicsWorldSystem.h  Store.h  Utility.hpp  lString.h  nifUtil.h
include/ISPC/: MXPBD.ispc
include/MXPBD/: ConvexHull.h  DynamicAABBTree.h  PhysicsConfig.h  PhysicsWorld.h  PhysicsWorldCommon.h  PhysicsWorldSystem.h  PhysicsWorldUpdater.h  ThreadPool.h
manifests/flatrim/: vcpkg.json
manifests/vr/: vcpkg.json
src/: Command.cpp  Condition.cpp  Config.cpp  ConvexHull.cpp  DynamicAABBTree.cpp  Hook.cpp  Main.cpp  PhysicsWorld.cpp  PhysicsWorldSystem.cpp  PhysicsWorldUpdater.cpp  Store.cpp  nifUtil.cpp
src/MXPBD/: ConvexHull.cpp  DynamicAABBTree.cpp  PhysicsConfig.cpp  PhysicsWorld.cpp  PhysicsWorldSystem.cpp  PhysicsWorldUpdater.cpp  SIMD_avx2.cpp  SIMD_avx512.cpp  ThreadPool.cpp
